--- a/Memory-Game/index.html
+++ b/Memory-Game/index.html
@@ -4,19 +4,20 @@
   <meta charset="utf-8">
   <title>Memory Game</title>
   <link rel="stylesheet" href="css/app.css">
-  <script src="lib/angular.js  type="text/javascript""></script>
-  <script src="js/app.js  type="text/javascript""></script>
-  <script src="js/game.js"  type="text/javascript"></script>
+  <script src="lib/angular.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/game.js"></script>
 </head>
 <body ng-controller="GameCtrl">
-  <div>qnt acerto: {{game.unmatchedPairs}}</div>
-  <div>Carta: {{game.firstPick.title}}</div>
+  <div>Qtd de acertos: {{game.unmatchedPairs}}</div>
+  <div>deu Matching? kk: {{game.firstPick.title}}</div>
+  <div class="message">{{game.message}}</div>
 
   <table>
     <tr ng-repeat="row in game.grid">
       <td ng-repeat="tile in row" ng-click="game.flipTile(tile)">
 
-              <div class="container">
+               <div class="container">
           <div class="card" ng-class="{flipped: tile.flipped}">
               <img class="front" ng-src="img/back.png">
               <img class="back" ng-src="img/{{tile.title}}.png">
@@ -27,6 +28,6 @@
     </tr>
   </table>
 
-  <div class="message">{{game.message}}</div>
+  
 </body>
 </html>
